[tool.poetry]
name = "fastapi-google-maps"
version = "0.1.0"
description = "FastAPI app that consumes Google Maps public APIs (Geocoding, Places, Directions)."
authors = ["Tu Nombre <tu_email@ejemplo.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
httpx = "^0.24.1"
pydantic = "^1.10.12"
python-dotenv = "^1.0.0"
cachetools = "^5.4.0"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.7"
aioboto3 = "^13.1.1"
Pygments  = "2.19.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
behave = "^1.2.6"
fastapi-cli = "0.0.11"


[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

# --- Configuración de Ruff ---
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # E=pycodestyle, F=pyflakes, I=import order
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
