[tool.poetry]
name = "images_project"
version = "0.1.0"
description = "Testing FastAPI app that consumes Images from UNSPLASH."
authors = ["Migue Vargas <lvc0107@proton.me>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.101.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
httpx = "^0.24.1"
pydantic = "2.12.3"
pydantic-settings = "^2.11.0"
python-dotenv = "^1.0.0"
cachetools = "^5.4.0"
sqlalchemy = "^2.0.21"
alembic = "^1.12.0"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.7"
aioboto3 = "^13.1.1"
Pygments  = "2.19.2"
structlog = "25.5.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.0"
pre-commit = "4.3.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
behave = "^1.2.6"
fastapi-cli = "0.0.11"
polyfactory = "^2.22.3"


[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

# --- Configuración de Ruff ---
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations"]

[tool.ruff.lint]
select = ["E", "F", "I"]  # E=pycodestyle, F=pyflakes, I=import order
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
